[gd_scene load_steps=2 format=3 uid="uid://3wvvolcwvsk7"]

[ext_resource type="Script" path="res://Util/Checkpoint/CheckpointMenu.gd" id="1_nbt8d"]

[node name="CheckpointMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_nbt8d")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Rest" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Rest"

[node name="Level" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level Up"

[node name="Storage" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Storage"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Leave"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Rest" to="." method="_on_rest_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Level" to="." method="_on_level_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Storage" to="." method="_on_storage_pressed"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_button_up"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
